--- a/index.html
+++ b/index.html
@@ -1,127 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
-  </head>
-  <body>
-    <table align="center">
+</head>
+
+<body>
+    <table>
         <tr>
-            <td><img src="./pfp.png" alt="Profile Picture" height="200px"></td>
-            <td><h1>Aryan Sharma</h1></td>
+            <td><img src="./Aryan_Sharma_Pic.png" alt="Aryan's Profile Picture" height="150"></td>
+            <td>
+                <h1>Aryan Sharma</h1>
+            </td>
+        </tr>
+    </table>
+    <hr />
+    <h2>Summary</h2>
+    <p>I am a hardworking and dedicated individual with experience in customer service and administration.</p>
+    <hr>
+    <h2>Education</h2>
+    <ul>
+        <li>Bachelor of Technology, Electronics - Shri Ramdeobaba College of Engineering and Management (2020-2024)</li>
+    </ul>
+    <hr>
+    <h2>Work Exeperience</h2>
+    <ul>
+        <li>
+            <h3>Business Analyst - Simple CRM</h3>
+            <p>February 2024 - May 2024</p>
+            <ul>
+                <li>Played an integral role in a capstone project focused on configuring the support automation product.
+                <li>Developed comprehensive Business Requirements Document (BRD) and documented Minutes of Meetings.
+                </li>
+                <li>Implemented custom workflows resulting in a 25% increase in support ticket resolution efficiency and
+                    10% reduction in manual intervention requirements.</li>
+            </ul>
+        </li>
+        <li>
+            <h3>Frontend Developer - PrimaThink Technologies Private Limited</h3>
+            <p>October 2022 - January 2023</p>
+            <ul>
+                <li>Collaborated with a cross-functional team to develop a visually captivating and user-centric modern
+                    UI/UX prototype for the PrimaThink website, showcasing an enhanced user experience</li>
+                <li>Designed and executed a robust car rental website, enabling efficient management of vehicle
+                    descriptions and seamless upload
+                    functionality for administrators.</li>
+            </ul>
+        </li>
+    </ul>
+    <hr>
+    <h2>Skills</h2>
+    <table>
+        <tr>
+            <td>
+                <ul>
+                    <li>C/C++</li>
+                    <li>Python</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Microsoft Office</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>SQL</li>
+                    <li>Linux</li>
+                    <li>Windows</li>
+                    <li>Git</li>
+                    <li>GitHub</li>
+                    <li>Docker</li>
+                </ul>
+            </td>
         </tr>
     </table>
     <hr>
-    <h3>Summary:</h3>
-    <p>
-      A highly motivated and results-driven fresher seeking a opportuinity
-      position in Development where I can utilize my Frontend skills to
-      contribute to the success of the organization. Committed to continuous
-      learning and growth, I aim to leverage my strong development and analytics
-      skills to drive innovation, exceed goals, and make a meaningful impact
-      within a dynamic team environment.
-    </p>
-    <hr />
-    <h3>Education:</h3>
-    <ol>
-      <li>
-        <strong>SSC: Bharti Krishna Vidhya Vihar</strong>
-        <ul>
-          <li>2017-2018</li>
-        </ul>
-      </li>
-      <li>
-        <strong>HSC: M.K.H.Sancheti Public School and Junior College</strong>
-        <ul>
-          <li>2019-2020</li>
-        </ul>
-      </li>
-      <li>
-        <strong
-          >Bachelor: Shri Ramdeobaba College of Engineering and
-          Management</strong
-        >
-        <ul>
-          <li>2020-2024</li>
-        </ul>
-      </li>
-    </ol>
-    <hr />
-    <h3>Work Experience:</h3>
-    <ol>
-      <li>
-        <p><strong>Job Title:</strong>Frontend Developer(Intern)</p>
-        <p><strong>Employer:</strong>PrimaThink Private Limited</p>
-        <p><strong>Duration:</strong>November 2022 - January 2023 (3 Months)</p>
-        <br />
-        <strong>Responsibilities:</strong>
-        <ul>
-          <li>
-            Monitering the UI/UX of the tasks alloted during the internship
-          </li>
-          <li>Updating the UI</li>
-          <li>Making the landing page more user friendly</li>
-        </ul>
-        <p><strong>Job Title:</strong>Frontend Developer(Intern)</p>
-        <p><strong>Employer:</strong>PrimaThink Private Limited</p>
-        <p><strong>Duration:</strong>November 2022 - January 2023 (3 Months)</p>
-        <br />
-      </li>
-      <li>
-        <p><strong>Club Position:</strong>Web Master</p>
-        <p>
-          <strong>Club:</strong>IEEE Signal Processing Society Student Chapter
-        </p>
-        <p><strong>Duration:</strong>November 2022 - Ongoing</p>
-        <br />
-        <strong>Responsibilities:</strong>
-        <ul>
-          <li>
-            Created a Club Website and Managed Social Media handles(Instagram)
-          </li>
-          <li>Contributed in the Content Creation for Social Medias</li>
-          <li>
-            Helped in making proposals for the conduction of the events and
-            organized various event under the Society
-          </li>
-        </ul>
-      </li>
-    </ol>
-    <hr />
-    <h3>Skills:</h3>
-    <h4>Programming Skills</h4>
+    <h2>Awards and Certifications</h2>
     <ul>
-      <li>C++</li>
-      <li>Python</li>
-      <li>HTML</li>
-      <li>CSS</li>
+        <li>Design Patent - The Patent Office, Government of India - 2023</li>
+        <li>3rd Position - ENNOVATE, Shri Ramdeobaba College of Engineering and Management</li>
     </ul>
-    <hr />
-    <h3>Accomplishments:</h3>
-    <ol>
-      <li>
-        <strong>Electronix:</strong>
-        <ul>
-          <li>
-            Secured 3rd Position in Poster Making Competition which was a
-            national level competition and more than 50 teams participated in
-            it.
-          </li>
-          <li>
-            Competition was based on the Project which we created during our 6th
-            semester.
-          </li>
-          <li><a href="">Certification</a></li>
-        </ul>
-      </li>
-      <li>
-        <strong>The Complete Web Development Bootcamp 2023</strong>
-        <ul>
-          <li>Completed Web Development Bootcamp from Udemy</li>
-          <li><a href="">Certification</a></li>
-        </ul>
-      </li>
-    </ol>
-  </body>
+    <hr>
+    <footer>© Aryan Sharma. All rights reserved.</footer>
+</body>
+
 </html>
